--- a/packages/vue/examples/transition/list.html
+++ b/packages/vue/examples/transition/list.html
@@ -5,14 +5,9 @@
   <button @click="insert">insert at random index</button>
   <button @click="reset">reset</button>
   <button @click="shuffle">shuffle</button>
+
   <transition-group tag="ul" name="fade" class="container">
-    <item
-      v-for="item in items"
-      class="item"
-      :msg="item"
-      :key="item"
-      @rm="remove(item)"
-    >
+    <item v-for="item in items" class="item" :msg="item" :key="item" @rm="remove(item)">
     </item>
   </transition-group>
 </div>
@@ -53,6 +48,15 @@
         }
       },
     },
+    watch: {
+      items: {
+        handler(newVal, oldVal) {
+          console.log('java', newVal, oldVal);
+        },
+        immediate: true,
+        deep: true
+      }
+    }
   }).mount('#app')
 </script>
 
@@ -61,6 +65,7 @@
     position: relative;
     padding: 0;
   }
+
   .item {
     width: 100%;
     height: 30px;
@@ -68,18 +73,21 @@
     border: 1px solid #666;
     box-sizing: border-box;
   }
+
   /* 1. declare transition */
   .fade-move,
   .fade-enter-active,
   .fade-leave-active {
     transition: all 0.5s cubic-bezier(0.55, 0, 0.1, 1);
   }
+
   /* 2. declare enter from and leave to state */
   .fade-enter-from,
   .fade-leave-to {
     opacity: 0;
     transform: scaleY(0.01) translate(30px, 0);
   }
+
   /* 3. ensure leaving items are taken out of layout flow so that moving
       animations can be calculated correctly. */
   .fade-leave-active {
